# Lobster-Agents

./: .env.example  .gitignore  README.md  docker-compose.full.yml  docker-compose.yml  start.sh  test_e2e.py
backend/: Dockerfile  pyproject.toml
backend/src/nemoclaw_reef/: claw_config.py  config.py  main.py  models.py  skill_catalog.py
backend/src/nemoclaw_reef/agents/: base.py  memory.py  orchestrator.py  roles.py
backend/src/nemoclaw_reef/infra/: __init__.py  app_state.py
backend/src/nemoclaw_reef/integrations/: __init__.py  hermes_runner.py  nemoclaw_cli.py  openclaw_cli.py  process.py
backend/src/nemoclaw_reef/llm/: client.py  registry.py
backend/src/nemoclaw_reef/reef/: __init__.py  idle_chat.py  query_workflow.py
backend/src/nemoclaw_reef/routes/: __init__.py  agents.py  health.py  models.py  query.py  sandboxes.py  state.py  websocket.py
backend/src/nemoclaw_reef/services/: sandbox_manager.py
backend/src/nemoclaw_reef/state/: layout.py  reef_state.py
backend/src/nemoclaw_reef/tools/: file_reader.py  web_search.py
backend/src/office_agents/: claw_config.py  config.py  main.py  models.py  skill_catalog.py
backend/src/office_agents/agents/: base.py  orchestrator.py  roles.py
backend/src/office_agents/infra/: app_state.py  broadcaster.py
backend/src/office_agents/llm/: client.py  registry.py
backend/src/office_agents/office/: layout.py  state.py  store.py
backend/src/office_agents/reef/: __init__.py  idle_chat.py  query_workflow.py
backend/src/office_agents/routes/: health.py  lobsters.py  models.py  query.py  sandbox.py  state.py  ws.py
backend/src/office_agents/sandbox_runtime/: __init__.py  _subprocess.py  (+4 more)
backend/tests/: test_runtime_config.py  test_sandbox_diagnostics.py
(+105 files in other folders)
