[project]
name = "office-agents"
version = "0.1.0"
description = "Backend for Office Agents - a pixel art office simulation where AI agents collaborate"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "openai>=1.50.0",
    "aiosqlite>=0.20.0",
    "ddgs>=6.0.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "eval_type_backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/office_agents"]

[project.scripts]
office-agents = "office_agents.main:run"
